페이지 구조 및 url 수정

--- a/machine_data/templates/machine_data/machine_detail_page.html
+++ b/machine_data/templates/machine_data/machine_detail_page.html
@@ -9,7 +9,7 @@
     <h4>{{ record.new_l_headspecificationname }}</h4>
     <h4>{{ record.new_workeryominame }}</h4>
     <h4>{{ record.new_dt_request }}</h4>
-    <p>{{ record.new_ntxt_optiondetails }}</p>
+    <p style="white-space: pre;">{{ record.new_ntxt_optiondetails }}</p>
     <p>{{ record.new_ntxt_etcdetails }}</p>
 </body>
 </html>
