--- a/machine_data/templates/machine_data/search_result.html
+++ b/machine_data/templates/machine_data/search_result.html
@@ -5,8 +5,10 @@
     <title>Machine Data</title>
 </head>
 <body>
+<h2>Search Result</h2>
 
-{% for p in records %}
+{% for p in machine_list %}
+    <p>검색결과</p>
     </hr>
     <h3>{{ p.new_l_processsettingname }}</h3>
     <h4>{{ p.new_l_headspecificationname }}</h4>
