--- a/machine_data/templates/machine_data/search_page.html
+++ b/machine_data/templates/machine_data/search_page.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Machine Information</title>
-</head>
-<body>
-    <h1> 메인 페이지 - 검색 창 기능 구현이 필요합니다.</h1>
-</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="colorlib.com">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'machine_data/css/main.css' %}" >
+  </head>
+  <body>
+    <div class="s003">
+      <h1>Page Name</h1>
+      <form>
+        <div class="inner-form">
+          <div class="input-field first-wrap">
+            <div class="input-select">
+              <select data-trigger="" name="choices-single-default">
+                <option placeholder="">Tracking No</option>
+                <option>Serial No</option>
+                <option>Customer</option>
+                <option>Options</option>
+              </select>
+            </div>
+          </div>
+          <div class="input-field second-wrap">
+            <input id="search" type="text" placeholder="Enter Data...">
+          </div>
+          <div class="input-field third-wrap">
+            <button class="btn-search" type="button" onclick="searchData();">
+              <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <script src="{% static 'machine_data/js/extention/choices.js' %}"></script>
+    <script>
+      const choices = new Choices('[data-trigger]',
+      {
+        searchEnabled: false,
+        itemSelectText: '',
+      });
+      function searchData(){
+        let searchValue = document.getElementById('search').value.trim();
+        if (searchValue.length > 1){
+          location.href="/machinedata/searchresult/" + searchValue + "/";
+        }
+        else {
+          alert('검색어('+ searchValue + ')가 너무 짧습니다.');
+        }
+      };
+      document.getElementById('search').addEventListener('keyup', function(event){
+        if(event.key === 'Enter'){
+          searchData();
+        }
+      });
+    </script>
+  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
