--- a/machine_data/templates/machine_data/search_result.html
+++ b/machine_data/templates/machine_data/search_result.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 <h2>Search Result</h2>
-
-{% for p in machine_list %}
-    <p>검색결과</p>
-    </hr>
-    <h3>{{ p.new_l_processsettingname }}</h3>
+{% for p in machinedata_list %}
+    <hr>
+    <h3><a href="{{ p.get_absolute_url }}">{{ p.new_l_processsettingname }}</a></h3>
     <h4>{{ p.new_l_headspecificationname }}</h4>
     <p>{{ p.new_workeryominame }}</p>
 {% endfor %}
