--- a/machine_data/templates/machine_data/search_page.html
+++ b/machine_data/templates/machine_data/search_page.html
@@ -54,7 +54,7 @@
         }
       };
       document.getElementById('search').addEventListener('keyup', function(event){
-        if(event.key === 'Enter'){
+        if(event.keyCode === 'Enter'){
           searchData();
         }
       });
